CFDE-20220430.1
 -Added new GeneTissues iframe to allow user-selected tissues (#4)
 -Fix GeneTissues bug displaying sample counts (#7)
 -Eliminate flickering of ViolinPlot when display preferences are changed (#2)
 -Assign GeneTissues v-chip text color based on luminosity of background color (#1)
 -Add parameters to GeneTissues: uberonIds, tissueDetailIds (#3)
 -Added new Anatomy iframe with support for multi-gene, multi-tissue comparisons (#10)
 -Adjusted tissue/anatomy colors in data table to match those in ViolinPlot (#13)
 -Auto-truncate long gene descriptions (#11)
 -Add option to toggle inclusion of mitochondrial genes (#12)

CFDE-20220228.1 (February 28, 2022)
 -Knowledgebase/Markdown compatible iframes.

CFDE-20211130.1 (November 30, 2021)
 -Initial use case 1 prototype.