@@ -8,6 +8,7 @@ CFDE-20220430.1
  -Adjusted tissue/anatomy colors in data table to match those in ViolinPlot (#13)
  -Auto-truncate long gene descriptions (#11)
  -Add option to toggle inclusion of mitochondrial genes (#12)
+ -Display tissue rank where known for genes in user-selected set (#17)
 
 CFDE-20220228.1 (February 28, 2022)
  -Knowledgebase/Markdown compatible iframes.
